--- a/share/css/forms-n-buttons.css
+++ b/share/css/forms-n-buttons.css
@@ -158,7 +158,7 @@ Static Forms
 	.form-wrap.halves { padding: 20px 5px 20px 25px; }
 	.form-wrap h2 { color: #4c5461; font-size: 20px; margin: 0; padding-bottom: 20px; }
 	.form-wrap hr { width: 150%; margin-left: -25%; }
-	.form-wrap .button { height: 31px; line-height: 20px; }
+	.form-wrap .button { height: 28px; line-height: 20px; }
 	
 /*--------------------------------------------------
 Modal Forms
@@ -268,6 +268,7 @@ Buttons/Tags
 	text-align: center; 
 	padding: 4px 12px;
 	display: inline-block; 
+	vertical-align: middle;
 	position: relative;
 	border: 1px solid #babec9;
 	-moz-border-radius: 3px;
@@ -635,7 +636,7 @@ Buttons/Tags
 			padding: 0 3px;
 			border-right: 1px solid #c6c6c6;			
 			position: relative;
-			top: -1px;
+			top: -3px;
 			left: -1px;
             -moz-border-radius: 0;
 			-webkit-border-radius: 0;
