--- a/share/css/font-face.css
+++ b/share/css/font-face.css
@@ -9,7 +9,7 @@
     font-weight: normal;
     font-style: normal;
 }
-*/
+
 @font-face {
     font-family: 'nevis';
     src: url('../font/nevis.eot');
@@ -18,5 +18,16 @@
          url('../font/nevis.ttf') format('truetype'),
          url('../font/nevis.svg#nevis') format('svg');
     font-weight: normal;
+    font-style: normal;
+}
+*/
+@font-face {
+    font-family: 'familiar_probold';
+    src: url('../font/Familiar_Pro-Bold-webfont.eot');
+    src: url('../font/Familiar_Pro-Bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../font/Familiar_Pro-Bold-webfont.woff') format('woff'),
+         url('../font/Familiar_Pro-Bold-webfont.ttf') format('truetype'),
+         url('../font/Familiar_Pro-Bold-webfont.svg#familiar_probold') format('svg');
+    font-weight: bold;
     font-style: normal;
 }
