--- a/share/css/main.css
+++ b/share/css/main.css
@@ -57,10 +57,6 @@ a, .fakelink { color: #3363b3; text-decoration: none; }
 
 #wrapper { width: 100%; overflow: hidden; position: relative; }
 
-h1, .headfont { 
-	font-family: "Proxima Nova",ProximaNova,nevis,'nevis',Segoe,Segoe UI,Frutiger,"Frutiger Linotype","Myriad Pro",Myriad,Univers,Tahoma,"Gill Sans","Gill Sans MT","DejaVu Sans Condensed","Liberation Sans","Nimbus Sans L",Geneva,"Helvetica Neue",Helvetica,Arial,sans-serif;	
-}
-
 h1, h2, h3, h4, h5, h6 {	
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
 	position: relative;
@@ -68,7 +64,13 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: normal;
 	line-height: 1;
 }
-h1, .h1 { font-size:36px; color: #48505b; letter-spacing: -0.07em; text-align: center; }
+
+h1, .headfont { 
+	font-family: "Proxima Nova",ProximaNova,'familiar_probold',Segoe,Segoe UI,Frutiger,"Frutiger Linotype","Myriad Pro",Myriad,Univers,Tahoma,"Gill Sans","Gill Sans MT","DejaVu Sans Condensed","Liberation Sans","Nimbus Sans L",Geneva,"Helvetica Neue",Helvetica,Arial,sans-serif;	
+	font-weight: bold;
+}
+
+h1, .h1 { font-size:36px; color: #48505b; letter-spacing: -0.025em; text-align: center; }
 h2 , .h2{ font-size:24px; }
 h3 , .h3{ font-size:20px; } 
 h4, .h4 { font-size:18px; }
@@ -874,7 +876,7 @@ filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
 			width: 100%;
 		}
 }
-@media only screen and (max-width: 600px) {		
+@media only screen and (max-width: 60em) {		
 	body, .content-wrap {
 		min-width: 320px;
 	}
