--- a/share/css/font-face.css
+++ b/share/css/font-face.css
@@ -31,3 +31,25 @@
     font-weight: bold;
     font-style: normal;
 }
+
+@font-face {
+  font-family: 'FontAwesome';
+  src: url('../font/fontawesome-webfont.eot');
+  src: url('../font/fontawesome-webfont.eot?#iefix') format('embedded-opentype'), 	   
+	   url('../font/fontawesome-webfont.woff') format('woff'), 	   
+	   url('../font/fontawesome-webfont.ttf') format('truetype'),
+	   url('../font/fontawesome-webfont.svg#fontawesomeregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+	font-family: 'dukgo-icons';
+	src:url('../font/dukgo-icons.eot');
+	src:url('../font/dukgo-icons.eot?#iefix') format('embedded-opentype'),
+		url('../font/dukgo-icons.woff') format('woff'),
+		url('../font/dukgo-icons.ttf') format('truetype'),
+		url('../font/dukgo-icons.svg#dukgo-icons') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
