--- a/share/css/main.css
+++ b/share/css/main.css
@@ -365,10 +365,19 @@ a.fill {
         .header-logo__text {
             overflow: hidden;
         }
-		.header-logo h2, .header-logo h3 { line-height: 1; margin: 0; text-align: left; position: relative; }
-		.header-logo h2 { color: #4c4c4c; font-weight: bold; font-size: 21px; padding-top: 10px; left: -1px; }
+		.header-logo h2, .header-logo h3 { 
+			line-height: 1.25; 
+			margin: 0; 
+			text-align: left; 
+			position: relative; 
+			width: 100%;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;			
+		}
+		.header-logo h2 { color: #4c4c4c; font-weight: bold; font-size: 21px; padding-top: 8px; left: -1px; }
 			.header-logo h2 i { font-style: normal; color: #48af04; }
-		.header-logo h3 { color: #a2a2a2; font-weight: normal; padding-top: 4px; font-size: 12px; }
+		.header-logo h3 { color: #a2a2a2; font-weight: normal; padding-top: 0; font-size: 12px; }
 	
 		.header-account-info {
 			padding-top: 11px; 
