word-wrap: break-word for I#55 in community-platform

--- a/share/css/content.css
+++ b/share/css/content.css
@@ -1,4 +1,8 @@
 /* Content Styling */
+
+.content {
+	word-wrap: break-word; /* these containers often have user input, so don't let users break stuff */
+}
 	
 	.content h1 { 
 		font-weight: bold;
