--- a/share/css/forms-n-buttons.css
+++ b/share/css/forms-n-buttons.css
@@ -49,6 +49,18 @@ form input[type="password"], form input[type="email"], form input[type="text"], 
 	}
 	.no-js select {  padding: 3px; }
 	
+	form input.inline {
+		display: inline-block;
+		width: auto;
+		border: none;
+		border-bottom: 1px solid #444;
+		border-radius: 0;
+		padding: 4px 4px;
+		vertical-align: middle;
+		background: none;
+		top: -1px;
+	}
+	
     .form-label { line-height: 29px; }
     .button.inline-form { height: 29px; padding-top: 0; padding-bottom: 0; }
     
@@ -63,6 +75,11 @@ form input[type="password"], form input[type="email"], form input[type="text"], 
 		border-radius: 5px;
 	}
     .input-wrap .button-group .button { width: auto; }
+	
+	::-webkit-input-placeholder { color:#909092; }
+	::-moz-placeholder { color:#909092; }
+	:-ms-input-placeholder { color:#909092; }
+	input:-moz-placeholder { color:#909092; }
 
 /*--------------------------------------------------
 Login/Signup Forms
@@ -251,6 +268,9 @@ Column Forms
 .column-form p {
 	margin: 8px 0 0;
 }
+.column-form .url {
+	color: #8f8f8f;
+}
 	
 /*--------------------------------------------------
 Buttons/Tags
@@ -280,6 +300,10 @@ Buttons/Tags
 	text-shadow: 0 1px 1px #fff;
 	background-color: #f8f8f8;	
 	color: #474747;	
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	max-width: 100%;
+	overflow: hidden;
 	box-shadow: inset 0 1px 0 rgba(255,255,255,0.1), 0 1px 1px rgba(0,0,0,0.1);
 	-webkit-box-sizing: content-box;
 	-moz-box-sizing: content-box;
@@ -295,7 +319,7 @@ Buttons/Tags
 		margin-bottom: 4px; 
 	}
 	.button .icon, .tag .icon { padding-right: 6px; }
-	.button__label { padding-left: 6px; }
+	.button__label { padding-left: 8px; }
 	
 	
 	.half > .button, .third  > .button, .twothird  > .button, .quarter > .button, .sixth > .button { 
@@ -608,10 +632,10 @@ Buttons/Tags
 		}
 	
     .button-nav-current {
-        /* extended from charcoal */
-        -moz-box-shadow: inset 0 0 4px rgba(0,0,0,0.1), inset -1px 0 0 rgba(0,0,0,0.2);
-		-webkit-box-shadow: inset 0 0 4px rgba(0,0,0,0.1), inset -1px 0 0 rgba(0,0,0,0.2);
-		box-shadow: inset 0 0 4px rgba(0,0,0,0.1), inset -1px 0 0 rgba(0,0,0,0.2);
+        /* extended from another color */
+        -moz-box-shadow: inset 0 0 8px rgba(0,0,0,0.5), inset -1px 0 0 rgba(0,0,0,0.1);
+		-webkit-box-shadow: inset 0 0 8px rgba(0,0,0,0.5), inset -1px 0 0 rgba(0,0,0,0.1);
+		box-shadow: inset 0 0 8px rgba(0,0,0,0.5), inset -1px 0 0 rgba(0,0,0,0.1);
     }
     
 	/* pale colors */
