--- a/share/css/main.css
+++ b/share/css/main.css
@@ -98,28 +98,58 @@ pre, tt {
 }
 tt { padding: 0 3px 1px; }
 pre {	
+	display: block;
+	max-width: 100%;
 	position: relative;
     margin: 0 0 18px 0; 
 	overflow: auto;	
-	padding: 0;		    
+	padding: 11px;		    
 	-moz-tab-size: 1;
 	-o-tab-size: 1;
 	tab-size: 1;
 	-ms-word-break: normal;
 	word-break: normal;
-	word-break: normal;
 	-webkit-hyphens: none;
 	-moz-hyphens: none;
 	-ms-hyphens: none;
-	hyphens: none;	
+	hyphens: none;
+	
+	white-space: -moz-pre-wrap;
+	white-space: -pre-wrap;
+	white-space: -o-pre-wrap;
+	white-space: pre-wrap;
+	
+	word-wrap: normal;
 }
 
 pre code {
-	padding: 11px; 
 	background: none;
-	white-space: pre;
-	overflow: auto;
-	display: block;
+	white-space: pre;	
+	overflow: hidden;
+}
+
+.bbcode_code_header {
+	-webkit-border-radius: 4px;
+    border-radius: 4px;
+	text-indent: 8px;
+	padding-top: 8px;
+	background-color: #f3f3f3;
+	border: 1px solid #cacaca;	
+	font-size: 0.8em;
+	font-weight: bold;
+	//margin-bottom: 18px;
+}
+.bbcode_code_body {
+	-webkit-border-radius: 0 0 4px 4px;
+    border-radius: 0 0 4px 4px;
+	text-indent: none;
+	margin-bottom: 0;
+	margin-top: 8px;
+	margin-left: -1px;
+	margin-right: -1px;
+	max-width: none;
+	font-size: 1.2em;
+	font-weight: normal;
 }
 
 /* For syntax highlighting in code blocks */
