Update CSS for DuckDuckHack Docs code snippets - Reduce font-size to 12px from 14 for narrower code blocks - Switch to better, cross-platform font-stack - changes only affect docs pages, based on duckduckhack-docs class on   <body>

--- a/share/css/main.css
+++ b/share/css/main.css
@@ -128,6 +128,15 @@ pre code {
 	overflow: hidden;
 }
 
+.duckduckhack-docs pre {
+	padding: 0;
+}
+
+.duckduckhack-docs pre code {
+	font-size: 12px;
+	font-family: Consolas, ‘Andale Mono WT’, ‘Andale Mono’, ‘Lucida Console’, ‘Lucida Sans Typewriter’, ‘DejaVu Sans Mono’, ‘Bitstream Vera Sans Mono’, Monaco, ‘Courier New’, monospace;
+}
+
 /* For syntax highlighting in code blocks */
 code > .synComment { color: lightblue; }
 code > .synConstant { color: lightgreen; }
