--- a/share/css/main.css
+++ b/share/css/main.css
@@ -140,6 +140,12 @@ pre code {
 	font-size: 12px;
 }
 
+.duckduckhack-docs p > code {
+	background: #e1e1e1;
+    padding: 2px 3px;
+    border-radius: 2px;
+}
+
 /* For syntax highlighting in code blocks */
 code > .synComment { color: lightblue; }
 code > .synConstant { color: lightgreen; }
